# HabitSec

./: Makefile  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  config.example.toml
backend/migrations/: 0001_init.sql  0002_seed_demo_data.sql
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/models/: mod.rs  rule.rs  score.rs  task.rs  team.rs  user.rs
backend/src/routes/: auth.rs  health.rs  mod.rs  rules.rs  scores.rs  tasks.rs  teams.rs  users.rs
backend/src/services/: mod.rs  scoring.rs
frontend/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/router/: index.ts
frontend/src/services/: apiClient.ts  auth.ts
frontend/src/views/: AdminDashboardView.vue  EmployeeTasksView.vue  LoginCallbackView.vue  LoginView.vue  RulesManagementView.vue
